# soda-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
frontend/: Dockerfile  README.md  package-lock.json
frontend/app/: app.css  root.tsx  routes.ts
frontend/app/components/: ChatInterface.tsx
frontend/app/layouts/: main.tsx
frontend/app/lib/: api.ts  config.ts  customer-context.tsx  types.ts  utils.ts
frontend/app/routes/: chat.tsx  history.tsx  stock.tsx
src/: config.py  main.py
src/domain/models/: action.py  app.py  auth.py  customer.py  soda.py  transaction_customer.py
src/infra/db/: sqlite.py
src/services/: auth.py  customer.py  soda.py  transaction_customer.py  user_query.py
src/utils/: prompts.py
src/web/controllers/: auth.py  customer.py  soda.py  transaction_customer.py  user_query.py
